# chrome_lambda_layer

./: .gitignore
js_x86_64/: README.md  deploy.sh  index.js  package-lock.json  package.json
rust_x86_64/: Cargo.toml  Dockerfile  Dockerfile.build  Dockerfile.lambda  deploy.sh  output.json  test-event.json
rust_x86_64/layer/: Dockerfile  Dockerfile.chrome  Dockerfile.glibc  build-chrome-layer.sh  build-layer.sh  package-lock.json  package.json
rust_x86_64/src/: main.rs
