[package]
name = "chrome-lambda-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.8.3"
tokio = { version = "1.0", features = ["macros"] }
serde = "1.0"
serde_json = "1.0"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
chromiumoxide = "0.7.0"
base64 = "0.21"
futures-util = "0.3"
